--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,13 @@ body{
 
 }
 
+@media only screen and (max-width:600px) {
+    a.prev, a.next{
+        display: none;
+    }
+
+}
+
 .titleMessage{
      position: absolute;
      width: 100%;
@@ -141,30 +148,55 @@ body{
      background: linear-gradient(to right,
      rgba(249,107,142,1),
      rgba(255,99,80,1));
-      margin-left: 23%;
+      margin-left: 25%;
       margin-top: 5%;
       padding-left: 20px;
-      padding-right: 25px;
+      padding-right: 20px;
        color: #ffffff;
        font-size: 20px;
        cursor: pointer;
-       border-color: #f06292;
-
-	
+       border-color: #f06292;	
 }
-.section p{
 
-  font-size: 17px;
-}
 .resume .btn:hover{
 
     background: #f06292;
 }
 
+@media only screen and (max-width:600px) {
+    .resume .btn{
+        padding-right: 5px;
+        padding-left: 5px;
+        margin-left: 30%;
+    }
+
+}
+
+.section p{
+
+  font-size: 17px;
+  font-family: 'Nunito';
+  letter-spacing: 2px;
+  text-indent: 50px;
+  
+}
+@media only screen and (max-width:600px) {
+    .section p{
+         font-size: 15px;
+         font-weight: 20px;
+         margin-right: 15px;
+    }
+
+}
+
+
+
 .aboutImage{
 
     max-width: 90%;
     border-radius: 50%;
+    margin-top: 50px;
+   margin-left: 25px;
     
 
 }
@@ -231,9 +263,15 @@ body{
 
 
 }
+@media only screen and (max-width:600px) {
+    .filter li{
+         padding: 0 2px 0 2px;
+    }
+
+}
 .filter .current{
     background:#E6399B;
-     border-color: #f06292;
+     border-color: rgba(255,99,80,1);
     color:#ffffff;
 
 }
@@ -242,6 +280,8 @@ body{
     width: 100%;
 
 }
+
+
 .section .heading{
 
     text-align: center;
@@ -274,6 +314,13 @@ body{
 	position: relative;
 	display: block;
 	overflow: hidden;
+}
+@media only screen and (max-width:600px) {
+    .items .item img{
+
+        height: 306px;
+    }
+
 }
 
 .items .icons {
@@ -366,7 +413,7 @@ body{
 }
 .item img{
 
-    border: 2px solid  #f06292;
+    border: 2px solid  #bdc3c7;
     
 
 }
@@ -383,8 +430,9 @@ body{
 
     font-size: 28px;
     background: rgba(0, 0, 0, 0.8);
-    margin-left: 40px;
+    margin-left:40px;
     margin-top:25px;
+    margin-right: 25px;
     text-align: center;   
     justify-content: center;
     align-items: center;
@@ -434,7 +482,7 @@ body{
 
     background: #212121;
     color: #ffffff;
-    padding: 30px 5px;
+    padding: 20px 5px;
 
 }
 .copyrightSection p{
