--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,8 @@ body{
     .resume .btn{
         padding-right: 5px;
         padding-left: 5px;
-        margin-left: 30%;
+        margin-left: 28%;
+
     }
 
 }
@@ -185,6 +186,7 @@ body{
          font-size: 15px;
          font-weight: 20px;
          margin-right: 15px;
+         text-indent: none;
     }
 
 }
